2007-02-15  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: set a timeout on curl, since it can block
	indefinitely while connecting, in some cases

2007-02-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: allow a hash-ref as argument to
	fetch_url_to_file instead of a string of position-dependent
	entries; also added a try_all_mirrors option to fetch_url_to_file
	to skip asking retries, and attempt to retry until all mirrors
	are exhausted

2007-02-03  Remi Mommsen <remigius.mommsen@cern.ch>

	* Package.pm, PkgVersion.pm: Let the user choose which provider
	to install in order to satisfy a virtual (provided) package.
	(feature request 1635337)
	
2007-01-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: If explicit interp in *Script, don't ignore
	subshell return code.

2007-01-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Automatically update (or warn) if index is
	out of date

2007-01-22  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make sure explicit --logfile can be written.

2007-01-21  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm: use env to set PERL5LIB since 10.4.9
	sudo strips it

2007-01-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: default to "make -j1" in install scripts

2007-01-11  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, SelfUpdate.pm, VirtPackage.pm: update website URL

2007-01-10  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't summarize BDO/obsolete violations if the
	warnings themselves aren't displayed.

2006-12-29  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: execute(): quick-exit if passed null script

2006-12-29  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Warn and ignore .info instead of dieing when
	instantiating with a Package field containing unknown %-exps
	* Services.pm: New expand_percent2 with more flexible API than the