@@ -2,6 +2,9 @@
 
 	* NetAccess.pm: set a timeout on curl, since it can block
 	indefinitely while connecting, in some cases
+	* Engine.pm, SelfUpdate.pm: Fink::Scanpackages is wrong, use
+	the cvs/rsync stat files if available, or fallback to
+	Fink::Package->db_index otherwise
 
 2007-02-14  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
